# soliscloud_api

./: .gitignore  LICENSE  README.md  config.json  example.py  example_entities.py  pyproject.toml  reqirements.txt  requirements-test.txt  requirements.txt
.github/workflows/: python-app.yml  python-publish.yml
soliscloud_api/: __init__.py  client.py  entities.py  helpers.py  soliscloud_api.py  types.py
soliscloud_api/src/: soliscloud_api.py
src/soliscloud-api/: soliscloud-api.py
src/soliscloud_api/: soliscloud_api.py
test/: const.py  test_entities.py  test_exceptions.py  test_helpers.py  test_private_methods.py  test_public_methods.py  test_public_methods_inverter.py  test_public_methods_station.py  test_types.py  test_types_factory.py  testdata_collector.json  testdata_inverter.json  testdata_station.json
