[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soliscloud-api"
version = "0.0.1"
authors = [
  { name="Peter van Hulten", email="peter.vanhulten@gmx.net" },
]
description = "SolisCloud API access for python"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "hashlib",
    "hmac",
    "base64",
    "re",
    "enum",
    "asyncio",
    "datetime",
    "http",
    "json",
    "typing",
    "aiohttp",
    "async_timeout",
]

[project.urls]
"Homepage" = "https://github.com/hultenvp/soliscloud-api"
"Bug Tracker" = "https://github.com/hultenvp/soliscloud-api/issues"
